--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is an npm package for astrology information.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "helper": "node astroData.js"
   },
   "keywords": [
     "javascript",
